@@ -1,8 +1,8 @@
 /******
     Set up standard Plone popups
-    
+
     Provides globals: common_content_filter
-    
+
     Extends jQuery.tools.overlay.conf to set up common Plone effects and
     visuals.
 ******/
@@ -10,7 +10,7 @@
 
 var common_content_filter = '#content>*:not(div.configlet),dl.portalMessage.error,dl.portalMessage.info';
 
-jQuery.extend(jQuery.tools.overlay.conf, 
+jQuery.extend(jQuery.tools.overlay.conf,
     {
         fixed:false,
         speed:'fast',
@@ -25,7 +25,7 @@ jQuery(function($){
         // enhancement.
         return;
     }
-    
+
     // method to show error message in a noform
     // situation.
     function noformerrorshow(el, noform) {
@@ -164,11 +164,17 @@ jQuery(function($){
 
     // Content history popup
     $('#content-history a').prepOverlay({
-       subtype: 'ajax', 
+       subtype: 'ajax',
        filter: 'h2, #content-history',
        urlmatch: '@@historyview',
        urlreplace: '@@contenthistorypopup'
     });
+
+    // Author info popup
+    $('.userlink').prepOverlay({
+        subtype: 'ajax',
+        filter: common_content_filter,
+     });
 
 });
 
