@@ -170,6 +170,7 @@
                         <tal:block tal:condition="result/Creator"
                             tal:define="author python:context.portal_membership.getMemberInfo(result.Creator)">
                           <a href="#"
+                             class="userlink"
                              tal:attributes="href string:${context/@@plone_portal_state/navigation_root_url}/author/${result/Creator}"
                              tal:content="python:author and author['fullname'] or result.Creator"
                              tal:omit-tag="not:result/Creator"
